# rangy

./: .gitignore  pyproject.toml  readthedocs.yml  requirements-all.txt  requirements-dev.txt  setup.cfg  setup.py
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: pypi-publish.yml  python-test.yml  python-unittests.yml
docs/: conf.py  destribute.rst  index.rst  ranges.rst
rangy/: __init__.py  builtins.py  const.py  converters.py  distribute.py  exceptions.py  parse.py  parse_old.py  rangy.py  registry.py
rangy/tests/: test_converters.py  test_registry.py
scripts/: pypi::publish  setup  setup::all  setup::deps  setup::venv  tomlcat
tests/: test_comparison.py  test_constructpr.py  test_contains.py  test_converters.py  test_copy.py  test_count_validation.py  test_determine_count_type.py  test_open_ranges.py  test_parse.py  test_parsing.py  test_properties.py  test_registry.py
tests/parser/: test_normalize_sequence.py  test_parser_by_strings.py  test_parser_by_values.py  test_parser_input.py
