[build-system]
    requires = ["setuptools>=42", "wheel"]
    build-backend = "setuptools.build_meta"

[tool.poetry]
    name = "rangy"
    version = "0.1.0"
    description = "rangy because life in rangy"
    authors = ["Arthur Debert <arthur@debert.xyz>"]

    [tool.poetry.dependencies]
        python = "^3.6"

    [tool.poetry.dev-dependencies]
        pytest = "^8.3.3"


[project]
name = "Rangy"
version = "0.0.1"
authors = [
  { name="Arthur Debert", email="arthur@debert.xyz" },
]
description = "Rangy makes working with ranges a breeze."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arthur-debert/rangy"
Issues = "https://github.com/arthur-debert/rangy/issues"